--- a/pagina.html
+++ b/pagina.html
@@ -1,29 +1,17 @@
 <html>
-<head>
-<title>	Proyecto</title>
+    <head>
+        <meta charset="UFT-8">
+        <link rel="styleheet" type="text/css" href="css"
+/>        <title>Formulario de contacto</title>
 </head>
-<center><font color="blue" size=8></h1>Lecfa Empresarial</h1></font></center>
-<ul id="menu">
-<li><a href="https://es-la.facebook.com/">Contactos</a></li>
-<li><a href="https://www.findhealthclinics.com/MX/La-Piedad-de-Cabadas/1625002401070264/Cl%C3%ADnica-Bobath">Doctores</a></li>
-<body bgcolor="sky blue"> 
-<center><img src="C:\Users\isa\Pictures\Camera Roll\imagenes\logo2.jpg"><center> 
-<center><font color="pink" size=8></h1>Club Azteca</h1></font></center>
-<center><img src="C:\Users\isa\Pictures\Camera Roll\imagenes\ima1.jpg" width="300" heigth="300"/></center>
-<center><font color="pink" size=8></h1>Jugadoras</h1></font></center>
-<center><img src="C:\Users\isa\Pictures\Camera Roll\imagenes\FB_IMG_1585255968801.jpg" width="300" heigth="300"/></center
-<center><font color="pink" size=8></h1>Partidos</h1></font></center>
-<img src="C:\Users\isa\Pictures\Camera Roll\imagenes\resultado.jpg" heigth="400" width="400">
-<img src="C:\Users\isa\Pictures\Camera Roll\imagenes\par.jpg" heigth="400" width="400">
-<img src="C:\Users\isa\Pictures\Camera Roll\imagenes\IMG2.jpg" height="400" width="400">
-<center><font color="pink" size=8></h1>Videos</h1></font></center>
-<div align="center">
-<embed src="C:\Users\isa\Pictures\Camera Roll\video\video.mp4" width="500" heigth="500">
-</div>
-<center><font color="pink" size=8></h1>Lugar del plantel</h1></font></center>
-<img src="C:\Users\isa\Pictures\Camera Roll\imagenes\lugar\FB_IMG_1591291610690.jpg" heigth="600" width="400"><img src="C:\Users\isa\Pictures\Camera Roll\imagenes\lugar\FB_IMG_1591291612736.jpg" heigth="600" width="400">
-<img src="C:\Users\isa\Pictures\Camera Roll\imagenes\lugar\FB_IMG_1591291615910.jpg" heigth="600" width="400">
-</body>
-</html
-</body>
-</html
+<body>
+    <h1>contacto</h1>
+    <form method="post" action="enviar.php">
+        <input type="text" name="nombre" placeholder="Nombre">
+        <input type="email name="email" placeholder="Correo">
+        <br>
+        <textarea type="text" name="mensaje" placeholder="Mensaje"></textarea>
+        <br>
+        <input type="submit" value="Enviar">
+    </form>
+</html>
